prebuilt_files = [
    'm004_010.map.dat.lz',
    'm028_008.map.dat.lz',
    'm030_002.map.dat.lz',
    'm025_002.map.dat.lz',
    'm017_009.map.tex.lz',
    'm028_005.map.tex.lz',
    'm017_004.map.dat.lz',
    'm028_032.map.tex.lz',
    'm036_016.map.dat.lz',
    'm023_016.map.dat.lz',
    'm036_021.map.dat.lz',
    'm005_004.map.tex.lz',
    'm010_004.map.tex.lz',
    'm039_010b.map.tex.lz',
    'm038_024.map.tex.lz',
    'm043_023.map.tex.lz',
    'm041_002.map.dat.lz',
    'm019_001.map.tex.lz',
    'm043_014.map.tex.lz',
    'm014_006.map.dat.lz',
    'm001_006.map.dat.lz',
    'm020_014.map.dat.lz',
    'm008_003.map.dat.lz',
    'm043_041.map.tex.lz',
    'm010_009.map.dat.lz',
    'm022_002.map.tex.lz',
    'm028_023.map.dat.lz',
    'm005_001a.map.dat.lz',
    'm028_014.map.dat.lz',
    'm015_003.map.dat.lz',
    'm014_003b.map.dat.lz',
    'm009_006.map.dat.lz',
    'm036_007.map.tex.lz',
    'm023_007.map.tex.lz',
    'm004_001.map.tex.lz',
    'm011_001.map.tex.lz',
    'm039_016.map.tex.lz',
    'm039_021.map.tex.lz',
    'm201_002.map.dat.lz',
    'm027_005.map.dat.lz',
    'm030_024.map.tex.lz',
    'm018_004.map.tex.lz',
    'm030_013.map.tex.lz',
    'm042_011.map.tex.lz',
    'm028_019.map.tex.lz',
    'm001_017.map.tex.lz',
    'm003_001.map.dat.lz',
    'm016_001.map.dat.lz',
    'm039_005b.map.dat.lz',
    'm010_018.map.tex.lz',
    'm020_005.map.tex.lz',
    'm010_022.map.dat.lz',
    'm020_008.map.dat.lz',
    'm010_015.map.dat.lz',
    'm038_002.map.dat.lz',
    'm019_010.map.dat.lz',
    'm024_007.map.dat.lz',
    'm043_032.map.dat.lz',
    'm043_023.map.dat.lz',
    'm041_002.map.tex.lz',
    'm043_014.map.dat.lz',
    'm019_001.map.dat.lz',
    'm010_004.map.dat.lz',
    'm005_004.map.dat.lz',
    'm038_024.map.dat.lz',
    'm039_010b.map.dat.lz',
    'm010_009.map.tex.lz',
    'm043_041.map.dat.lz',
    'm008_003.map.tex.lz',
    'm020_014.map.tex.lz',
    'm022_002.map.dat.lz',
    'm001_006.map.tex.lz',
    'm014_006.map.tex.lz',
    'm025_002.map.tex.lz',
    'm030_002.map.tex.lz',
    'm028_008.map.tex.lz',
    'm017_009.map.dat.lz',
    'm004_010.map.tex.lz',
    'm023_016.map.tex.lz',
    'm036_016.map.tex.lz',
    'm036_021.map.tex.lz',
    'm028_005.map.dat.lz',
    'm028_032.map.dat.lz',
    'm017_004.map.tex.lz',
    'm020_005.map.dat.lz',
    'm010_018.map.dat.lz',
    'm039_005b.map.tex.lz',
    'm001_017.map.dat.lz',
    'm016_001.map.tex.lz',
    'm003_001.map.tex.lz',
    'm024_007.map.tex.lz',
    'm019_010.map.tex.lz',
    'm043_032.map.tex.lz',
    'm010_022.map.tex.lz',
    'm038_002.map.tex.lz',
    'm010_015.map.tex.lz',
    'm020_008.map.tex.lz',
    'm009_006.map.tex.lz',
    'm023_007.map.dat.lz',
    'm036_007.map.dat.lz',
    'm028_023.map.tex.lz',
    'm005_001a.map.tex.lz',
    'm014_003b.map.tex.lz',
    'm015_003.map.tex.lz',
    'm028_014.map.tex.lz',
    'm027_005.map.tex.lz',
    'm030_024.map.dat.lz',
    'm028_019.map.dat.lz',
    'm042_011.map.dat.lz',
    'm030_013.map.dat.lz',
    'm018_004.map.dat.lz',
    'm039_016.map.dat.lz',
    'm011_001.map.dat.lz',
    'm004_001.map.dat.lz',
    'm201_002.map.tex.lz',
    'm039_021.map.dat.lz',
    'm039_002.map.tex.lz',
    'm006_003.map.dat.lz',
    'm042_032.map.tex.lz',
    'm030_007.map.tex.lz',
    'm002_001.map.tex.lz',
    'm017_001.map.tex.lz',
    'm036_024.map.tex.lz',
    'm009_012.map.dat.lz',
    'm042_050.map.tex.lz',
    'm044_011.map.tex.lz',
    'm036_013.map.tex.lz',
    'm023_013.map.tex.lz',
    'm038_021.map.dat.lz',
    'm010_001.map.dat.lz',
    'm028_022b.map.tex.lz',
    'm038_016.map.dat.lz',
    'm043_011.map.dat.lz',
    'm019_004.map.dat.lz',
    'm033_005.map.tex.lz',
    'm019_009.map.tex.lz',
    'm033_008.map.dat.lz',
    'm039_007a.map.dat.lz',
    'm043_044.map.dat.lz',
    'm020_011.map.tex.lz',
    'm008_006.map.tex.lz',
    'm028_011.map.tex.lz',
    'm015_006.map.tex.lz',
    'm017_010.map.dat.lz',
    'm028_026.map.tex.lz',
    'm036_002.map.dat.lz',
    'm023_002.map.dat.lz',
    'm042_041.map.dat.lz',
    'm004_009.map.tex.lz',
    'm009_003.map.tex.lz',
    'm039_024.map.dat.lz',
    'm004_004.map.dat.lz',
    'm011_004.map.dat.lz',
    'm039_013.map.dat.lz',
    'm018_001.map.dat.lz',
    'm030_016.map.dat.lz',
    'm030_021.map.dat.lz',
    'm016_004.map.tex.lz',
    'm029_005.map.dat.lz',
    'm001_012.map.dat.lz',
    'm010_010.map.tex.lz',
    'm038_007.map.tex.lz',
    'm019_015.map.tex.lz',
    'm024_002.map.tex.lz',
    'm029_008.map.tex.lz',
    'm019_004.map.tex.lz',
    'm043_011.map.tex.lz',
    'm033_005.map.dat.lz',
    'm038_021.map.tex.lz',
    'm038_016.map.tex.lz',
    'm010_001.map.tex.lz',
    'm028_022b.map.dat.lz',
    'm039_007a.map.tex.lz',
    'm008_006.map.dat.lz',
    'm020_011.map.dat.lz',
    'm043_044.map.tex.lz',
    'm019_009.map.dat.lz',
    'm033_008.map.tex.lz',
    'm042_032.map.dat.lz',
    'm030_007.map.dat.lz',
    'm039_002.map.dat.lz',
    'm006_003.map.tex.lz',
    'm042_050.map.dat.lz',
    'm009_012.map.tex.lz',
    'm036_024.map.dat.lz',
    'm023_013.map.dat.lz',
    'm036_013.map.dat.lz',
    'm044_011.map.dat.lz',
    'm017_001.map.dat.lz',
    'm002_001.map.dat.lz',
    'm016_004.map.dat.lz',
    'm001_012.map.tex.lz',
    'm029_005.map.tex.lz',
    'm029_008.map.dat.lz',
    'm024_002.map.dat.lz',
    'm019_015.map.dat.lz',
    'm038_007.map.dat.lz',
    'm010_010.map.dat.lz',
    'm023_002.map.tex.lz',
    'm036_002.map.tex.lz',
    'm009_003.map.dat.lz',
    'm004_009.map.dat.lz',
    'm042_041.map.tex.lz',
    'm015_006.map.dat.lz',
    'm028_011.map.dat.lz',
    'm028_026.map.dat.lz',
    'm017_010.map.tex.lz',
    'm030_016.map.tex.lz',
    'm018_001.map.tex.lz',
    'm030_021.map.tex.lz',
    'm039_024.map.tex.lz',
    'm039_013.map.tex.lz',
    'm011_004.map.tex.lz',
    'm004_004.map.tex.lz',
    'm015_001.map.dat.lz',
    'm028_016.map.dat.lz',
    'm028_021.map.dat.lz',
    'm036_005.map.tex.lz',
    'm023_005.map.tex.lz',
    'm039_019.map.dat.lz',
    'm009_004.map.dat.lz',
    'm039_023.map.tex.lz',
    'm036_008.map.dat.lz',
    'm023_008.map.dat.lz',
    'm009_009.map.tex.lz',
    'm039_014.map.tex.lz',
    'm004_003.map.tex.lz',
    'm011_003.map.tex.lz',
    'm030_011.map.tex.lz',
    'm018_006.map.tex.lz',
    'm030_026.map.tex.lz',
    'm016_003.map.dat.lz',
    'm001_015.map.tex.lz',
    'm029_002.map.tex.lz',
    'm008_010.map.tex.lz',
    'm020_007.map.tex.lz',
    'm010_017.map.dat.lz',
    'm039_011a.map.dat.lz',
    'm010_020.map.dat.lz',
    'm007_001.map.tex.lz',
    'm043_030.map.dat.lz',
    'm039_003b.map.dat.lz',
    'm009_001b.map.tex.lz',
    'm024_005.map.dat.lz',
    'm019_012.map.dat.lz',
    'm001_018.map.dat.lz',
    'm004_012.map.dat.lz',
    'm036_019.map.tex.lz',
    'm023_019.map.tex.lz',
    'm006_004.map.tex.lz',
    'm001_003a.map.tex.lz',
    'm017_003a.map.dat.lz',
    'm028_030.map.tex.lz',
    'm017_006.map.dat.lz',
    'm028_007.map.tex.lz',
    'm009_015.map.tex.lz',
    'm036_023.map.dat.lz',
    'm021_002.map.tex.lz',
    'm044_021.map.dat.lz',
    'm036_014.map.dat.lz',
    'm023_014.map.dat.lz',
    'm038_011.map.tex.lz',
    'm010_006.map.tex.lz',
    'm001_009.map.tex.lz',
    'm019_003.map.tex.lz',
    'm026_002.map.dat.lz',
    'm033_002.map.dat.lz',
    'm043_021.map.tex.lz',
    'm014_004.map.dat.lz',
    'm001_004.map.dat.lz',
    'm039_004a.map.tex.lz',
    'm043_043.map.tex.lz',
    'm008_001.map.dat.lz',
    'm020_016.map.dat.lz',
    'm020_007.map.dat.lz',
    'm008_010.map.dat.lz',
    'm016_003.map.tex.lz',
    'm029_002.map.dat.lz',
    'm001_015.map.dat.lz',
    'm009_001b.map.dat.lz',
    'm043_030.map.tex.lz',
    'm039_003b.map.tex.lz',
    'm001_018.map.tex.lz',
    'm019_012.map.tex.lz',
    'm024_005.map.tex.lz',
    'm010_017.map.tex.lz',
    'm010_020.map.tex.lz',
    'm007_001.map.dat.lz',
    'm039_011a.map.tex.lz',
    'm023_005.map.dat.lz',
    'm036_005.map.dat.lz',
    'm009_004.map.tex.lz',
    'm039_019.map.tex.lz',
    'm028_016.map.tex.lz',
    'm015_001.map.tex.lz',
    'm028_021.map.tex.lz',
    'm018_006.map.dat.lz',
    'm030_011.map.dat.lz',
    'm030_026.map.dat.lz',
    'm023_008.map.tex.lz',
    'm036_008.map.tex.lz',
    'm039_023.map.dat.lz',
    'm011_003.map.dat.lz',
    'm004_003.map.dat.lz',
    'm039_014.map.dat.lz',
    'm009_009.map.dat.lz',
    'm019_003.map.dat.lz',
    'm001_009.map.dat.lz',
    'm043_021.map.dat.lz',
    'm033_002.map.tex.lz',
    'm026_002.map.tex.lz',
    'm010_006.map.dat.lz',
    'm038_011.map.dat.lz',
    'm020_016.map.tex.lz',
    'm008_001.map.tex.lz',
    'm039_004a.map.dat.lz',
    'm043_043.map.dat.lz',
    'm001_004.map.tex.lz',
    'm014_004.map.tex.lz',
    'm001_003a.map.dat.lz',
    'm017_003a.map.tex.lz',
    'm004_012.map.tex.lz',
    'm006_004.map.dat.lz',
    'm023_019.map.dat.lz',
    'm036_019.map.dat.lz',
    'm044_021.map.tex.lz',
    'm036_023.map.tex.lz',
    'm021_002.map.dat.lz',
    'm009_015.map.dat.lz',
    'm023_014.map.tex.lz',
    'm036_014.map.tex.lz',
    'm017_006.map.tex.lz',
    'm028_030.map.dat.lz',
    'm028_007.map.dat.lz',
    'm028_024.map.tex.lz',
    'm017_012.map.dat.lz',
    'm015_004.map.tex.lz',
    'm028_013.map.tex.lz',
    'm030_019.map.tex.lz',
    'imakuni.map.dat.lz',
    'm042_043.map.dat.lz',
    'm004_006.map.dat.lz',
    'm039_026.map.dat.lz',
    'm042_021.map.dat.lz',
    'm028_029.map.dat.lz',
    'm027_002.map.tex.lz',
    'm030_023.map.dat.lz',
    'm030_014.map.dat.lz',
    'm018_003.map.dat.lz',
    'm001_010.map.dat.lz',
    'm029_007.map.dat.lz',
    'm039_006b.map.tex.lz',
    'm038_008.map.dat.lz',
    'm020_002.map.dat.lz',
    'm010_025.map.tex.lz',
    'm038_005.map.tex.lz',
    'm010_012.map.tex.lz',
    'm019_017.map.tex.lz',
    'm043_035.map.tex.lz',
    'm006_001.map.dat.lz',
    'm030_005.map.tex.lz',
    'm025_005.map.tex.lz',
    'm042_030.map.tex.lz',
    'm030_008.map.dat.lz',
    'm028_002.map.dat.lz',
    'm028_035.map.dat.lz',
    'm036_011.map.tex.lz',
    'm023_011.map.tex.lz',
    'm039_008a.map.tex.lz',
    'm042_052.map.tex.lz',
    'm009_010.map.dat.lz',
    'm005_003.map.dat.lz',
    'm010_003.map.dat.lz',
    'm008_009.map.dat.lz',
    'm038_023.map.dat.lz',
    'm043_024.map.dat.lz',
    'm033_007.map.tex.lz',
    'm019_006.map.dat.lz',
    'm043_013.map.dat.lz',
    'm014_001.map.tex.lz',
    'm001_001.map.tex.lz',
    'm008_004.map.tex.lz',
    'm020_013.map.tex.lz',
    'm043_046.map.dat.lz',
    'm038_019.map.tex.lz',
    'm039_006b.map.dat.lz',
    'm020_002.map.tex.lz',
    'm038_008.map.tex.lz',
    'm029_007.map.tex.lz',
    'm001_010.map.tex.lz',
    'm019_017.map.dat.lz',
    'm043_035.map.dat.lz',
    'm010_025.map.dat.lz',
    'm010_012.map.dat.lz',
    'm038_005.map.dat.lz',
    'm042_043.map.tex.lz',
    'imakuni.map.tex.lz',
    'm017_012.map.tex.lz',
    'm028_024.map.dat.lz',
    'm030_019.map.dat.lz',
    'm028_013.map.dat.lz',
    'm015_004.map.dat.lz',
    'm027_002.map.dat.lz',
    'm030_023.map.tex.lz',
    'm028_029.map.tex.lz',
    'm042_021.map.tex.lz',
    'm018_003.map.tex.lz',
    'm030_014.map.tex.lz',
    'm004_006.map.tex.lz',
    'm039_026.map.tex.lz',
    'm033_007.map.dat.lz',
    'm043_024.map.tex.lz',
    'm043_013.map.tex.lz',
    'm019_006.map.tex.lz',
    'm008_009.map.tex.lz',
    'm010_003.map.tex.lz',
    'm005_003.map.tex.lz',
    'm038_023.map.tex.lz',
    'm043_046.map.tex.lz',
    'm038_019.map.dat.lz',
    'm020_013.map.dat.lz',
    'm008_004.map.dat.lz',
    'm001_001.map.dat.lz',
    'm014_001.map.dat.lz',
    'm025_005.map.dat.lz',
    'm030_005.map.dat.lz',
    'm042_030.map.dat.lz',
    'm006_001.map.tex.lz',
    'm039_008a.map.dat.lz',
    'm023_011.map.dat.lz',
    'm036_011.map.dat.lz',
    'm009_010.map.tex.lz',
    'm042_052.map.dat.lz',
    'm028_002.map.tex.lz',
    'm030_008.map.tex.lz',
    'm028_035.map.tex.lz',
    'm038_020.map.dat.lz',
    'm019_005.map.dat.lz',
    'm043_010.map.dat.lz',
    'm033_004.map.tex.lz',
    'm001_002.map.tex.lz',
    'm014_002.map.tex.lz',
    'm019_008.map.tex.lz',
    'm008_007.map.tex.lz',
    'm020_010.map.tex.lz',
    'm043_045.map.dat.lz',
    'm006_002.map.dat.lz',
    'm042_033.map.tex.lz',
    'm025_006.map.tex.lz',
    'm030_006.map.tex.lz',
    'm028_001.map.dat.lz',
    'm042_051.map.tex.lz',
    'm009_013.map.dat.lz',
    'm023_012.map.tex.lz',
    'm036_012.map.tex.lz',
    'm039_008b.map.tex.lz',
    'm019_019.map.dat.lz',
    'm001_013.map.dat.lz',
    'm029_004.map.dat.lz',
    'm035_001.map.dat.lz',
    'm020_001.map.dat.lz',
    'm039_006a.map.tex.lz',
    'm038_006.map.tex.lz',
    'm043_036.map.tex.lz',
    'm029_009.map.tex.lz',
    'm043_001.map.tex.lz',
    'm024_003.map.tex.lz',
    'm019_014.map.tex.lz',
    'm028_010.map.tex.lz',
    'm028_027.map.tex.lz',
    'm017_011.map.dat.lz',
    'm044_001.map.dat.lz',
    'm023_003.map.dat.lz',
    'm036_003.map.dat.lz',
    'm009_002.map.tex.lz',
    'm004_008.map.tex.lz',
    'm042_040.map.dat.lz',
    'm039_025.map.dat.lz',
    'm039_012.map.dat.lz',
    'm011_005.map.dat.lz',
    'm004_005.map.dat.lz',
    'm030_017.map.dat.lz',
    'm042_022.map.dat.lz',
    'm030_020.map.dat.lz',
    'm032_001.map.tex.lz',
    'm027_001.map.tex.lz',
    'm042_033.map.dat.lz',
    'm030_006.map.dat.lz',
    'm025_006.map.dat.lz',
    'm006_002.map.tex.lz',
    'm009_013.map.tex.lz',
    'm042_051.map.dat.lz',
    'm039_008b.map.dat.lz',
    'm036_012.map.dat.lz',
    'm023_012.map.dat.lz',
    'm028_001.map.tex.lz',
    'm043_010.map.tex.lz',
    'm019_005.map.tex.lz',
    'm033_004.map.dat.lz',
    'm038_020.map.tex.lz',
    'm043_045.map.tex.lz',
    'm020_010.map.dat.lz',
    'm008_007.map.dat.lz',
    'm019_008.map.dat.lz',
    'm014_002.map.dat.lz',
    'm001_002.map.dat.lz',
    'm036_003.map.tex.lz',
    'm023_003.map.tex.lz',
    'm044_001.map.tex.lz',
    'm042_040.map.tex.lz',
    'm004_008.map.dat.lz',
    'm009_002.map.dat.lz',
    'm028_010.map.dat.lz',
    'm017_011.map.tex.lz',
    'm028_027.map.dat.lz',
    'm030_017.map.tex.lz',
    'm030_020.map.tex.lz',
    'm027_001.map.dat.lz',
    'm032_001.map.dat.lz',
    'm042_022.map.tex.lz',
    'm039_025.map.tex.lz',
    'm004_005.map.tex.lz',
    'm011_005.map.tex.lz',
    'm039_012.map.tex.lz',
    'm020_001.map.tex.lz',
    'm035_001.map.tex.lz',
    'm039_006a.map.dat.lz',
    'm029_004.map.tex.lz',
    'm001_013.map.tex.lz',
    'm019_019.map.tex.lz',
    'm043_036.map.dat.lz',
    'm019_014.map.dat.lz',
    'm024_003.map.dat.lz',
    'm043_001.map.dat.lz',
    'm029_009.map.dat.lz',
    'm038_006.map.dat.lz',
    'm038_012.map.tex.lz',
    'm033_001.map.dat.lz',
    'm026_001.map.dat.lz',
    'm041_003.map.dat.lz',
    'm043_022.map.tex.lz',
    'm043_015.map.tex.lz',
    'm001_007.map.dat.lz',
    'm014_007.map.dat.lz',
    'm029_010.map.dat.lz',
    'm010_008.map.dat.lz',
    'm043_040.map.tex.lz',
    'm039_004b.map.tex.lz',
    'm008_002.map.dat.lz',
    'm020_015.map.dat.lz',
    'm022_003.map.tex.lz',
    'm004_011.map.dat.lz',
    'm025_003.map.dat.lz',
    'm030_003.map.dat.lz',
    'm028_009.map.dat.lz',
    'm042_001.map.dat.lz',
    'm017_003b.map.dat.lz',
    'm017_008.map.tex.lz',
    'm001_003b.map.tex.lz',
    'm028_004.map.tex.lz',
    'm028_033.map.tex.lz',
    'm017_005.map.dat.lz',
    'm023_017.map.dat.lz',
    'm036_017.map.dat.lz',
    'm009_016.map.tex.lz',
    'm034_001.map.tex.lz',
    'm021_001.map.tex.lz',
    'm036_020.map.dat.lz',
    'm001_016.map.tex.lz',
    'm029_001.map.tex.lz',
    'm020_004.map.tex.lz',
    'm010_019.map.tex.lz',
    'm039_011b.map.dat.lz',
    'm010_023.map.dat.lz',
    'm038_003.map.dat.lz',
    'm010_014.map.dat.lz',
    'm020_009.map.dat.lz',
    'm024_006.map.dat.lz',
    'm019_011.map.dat.lz',
    'm039_003a.map.dat.lz',
    'm043_033.map.dat.lz',
    'm009_001a.map.tex.lz',
    'm017_014.map.tex.lz',
    'm030_028.map.dat.lz',
    'm015_002.map.dat.lz',
    'm028_015.map.dat.lz',
    'm023_006.map.tex.lz',
    'm039_017.map.tex.lz',
    'm201_003.map.dat.lz',
    'm039_020.map.tex.lz',
    'm030_025.map.tex.lz',
    'm027_004.map.dat.lz',
    'm028_018.map.tex.lz',
    'm042_010.map.tex.lz',
    'm030_012.map.tex.lz',
    'm018_005.map.tex.lz',
    'm042_001.map.tex.lz',
    'm017_003b.map.tex.lz',
    'm028_009.map.tex.lz',
    'm030_003.map.tex.lz',
    'm025_003.map.tex.lz',
    'm001_003b.map.dat.lz',
    'm017_008.map.dat.lz',
    'm004_011.map.tex.lz',
    'm036_017.map.tex.lz',
    'm023_017.map.tex.lz',
    'm021_001.map.dat.lz',
    'm034_001.map.dat.lz',
    'm036_020.map.tex.lz',
    'm009_016.map.dat.lz',
    'm028_004.map.dat.lz',
    'm017_005.map.tex.lz',
    'm028_033.map.dat.lz',
    'm041_003.map.tex.lz',
    'm043_022.map.dat.lz',
    'm026_001.map.tex.lz',
    'm033_001.map.tex.lz',
    'm043_015.map.dat.lz',
    'm038_012.map.dat.lz',
    'm020_015.map.tex.lz',
    'm008_002.map.tex.lz',
    'm043_040.map.dat.lz',
    'm039_004b.map.dat.lz',
    'm010_008.map.tex.lz',
    'm022_003.map.dat.lz',
    'm029_010.map.tex.lz',
    'm014_007.map.tex.lz',
    'm001_007.map.tex.lz',
    'm023_006.map.dat.lz',
    'm030_028.map.tex.lz',
    'm017_014.map.dat.lz',
    'm028_015.map.tex.lz',
    'm015_002.map.tex.lz',
    'm030_025.map.dat.lz',
    'm027_004.map.tex.lz',
    'm018_005.map.dat.lz',
    'm030_012.map.dat.lz',
    'm042_010.map.dat.lz',
    'm028_018.map.dat.lz',
    'm039_017.map.dat.lz',
    'm039_020.map.dat.lz',
    'm201_003.map.tex.lz',
    'm010_019.map.dat.lz',
    'm020_004.map.dat.lz',
    'm029_001.map.dat.lz',
    'm001_016.map.dat.lz',
    'm019_011.map.tex.lz',
    'm024_006.map.tex.lz',
    'm009_001a.map.dat.lz',
    'm039_003a.map.tex.lz',
    'm043_033.map.tex.lz',
    'm010_023.map.tex.lz',
    'm039_011b.map.tex.lz',
    'm020_009.map.tex.lz',
    'm010_014.map.tex.lz',
    'm038_003.map.tex.lz',
    'm029_006.map.dat.lz',
    'm001_011.map.dat.lz',
    'm020_003.map.dat.lz',
    'm038_009.map.dat.lz',
    'm010_024.map.tex.lz',
    'm010_013.map.tex.lz',
    'm019_016.map.tex.lz',
    'm024_001.map.tex.lz',
    'm043_034.map.tex.lz',
    'm017_013.map.dat.lz',
    'm028_025.map.tex.lz',
    'm030_018.map.tex.lz',
    'm028_012.map.tex.lz',
    'm015_005.map.tex.lz',
    'm042_042.map.dat.lz',
    'm023_001.map.dat.lz',
    'm036_001.map.dat.lz',
    'm004_007.map.dat.lz',
    'm039_027.map.dat.lz',
    'm201_004.map.tex.lz',
    'm030_022.map.dat.lz',
    'm027_003.map.tex.lz',
    'm028_028.map.dat.lz',
    'm042_020.map.dat.lz',
    'm018_002.map.dat.lz',
    'm030_015.map.dat.lz',
    'm008_008.map.dat.lz',
    'm028_022a.map.tex.lz',
    'm010_002.map.dat.lz',
    'm005_002.map.dat.lz',
    'm038_015.map.dat.lz',
    'm038_022.map.dat.lz',
    'm033_006.map.tex.lz',
    'm043_025.map.dat.lz',
    'm043_012.map.dat.lz',
    'm019_007.map.dat.lz',
    'm038_018.map.tex.lz',
    'm020_012.map.tex.lz',
    'm008_005.map.tex.lz',
    'm022_004.map.dat.lz',
    'm039_007b.map.dat.lz',
    'm039_001.map.tex.lz',
    'm025_004.map.tex.lz',
    'm030_004.map.tex.lz',
    'm042_031.map.tex.lz',
    'm028_003.map.dat.lz',
    'm030_009.map.dat.lz',
    'm017_002.map.tex.lz',
    'm028_034.map.dat.lz',
    'm023_010.map.tex.lz',
    'm036_010.map.tex.lz',
    'm009_011.map.dat.lz',
    'm042_053.map.tex.lz',
    'm042_042.map.tex.lz',
    'm036_001.map.tex.lz',
    'm023_001.map.tex.lz',
    'm028_025.map.dat.lz',
    'm017_013.map.tex.lz',
    'm015_005.map.dat.lz',
    'm028_012.map.dat.lz',
    'm030_018.map.dat.lz',
    'm042_020.map.tex.lz',
    'm028_028.map.tex.lz',
    'm030_022.map.tex.lz',
    'm027_003.map.dat.lz',
    'm030_015.map.tex.lz',
    'm018_002.map.tex.lz',
    'm004_007.map.tex.lz',
    'm201_004.map.dat.lz',
    'm039_027.map.tex.lz',
    'm038_009.map.tex.lz',
    'm020_003.map.tex.lz',
    'm001_011.map.tex.lz',
    'm029_006.map.tex.lz',
    'm024_001.map.dat.lz',
    'm019_016.map.dat.lz',
    'm043_034.map.dat.lz',
    'm010_024.map.dat.lz',
    'm010_013.map.dat.lz',
    'm030_004.map.dat.lz',
    'm025_004.map.dat.lz',
    'm042_031.map.dat.lz',
    'm039_001.map.dat.lz',
    'm036_010.map.dat.lz',
    'm023_010.map.dat.lz',
    'm042_053.map.dat.lz',
    'm009_011.map.tex.lz',
    'm030_009.map.tex.lz',
    'm028_003.map.tex.lz',
    'm028_034.map.tex.lz',
    'm017_002.map.dat.lz',
    'm043_025.map.tex.lz',
    'm033_006.map.dat.lz',
    'm019_007.map.tex.lz',
    'm043_012.map.tex.lz',
    'm038_015.map.tex.lz',
    'm028_022a.map.dat.lz',
    'm005_002.map.tex.lz',
    'm010_002.map.tex.lz',
    'm008_008.map.tex.lz',
    'm038_022.map.tex.lz',
    'm008_005.map.dat.lz',
    'm020_012.map.dat.lz',
    'm038_018.map.dat.lz',
    'm039_007b.map.tex.lz',
    'm022_004.map.tex.lz',
    'm016_002.map.dat.lz',
    'm029_003.map.tex.lz',
    'm001_014.map.tex.lz',
    'm039_005a.map.dat.lz',
    'm020_006.map.tex.lz',
    'm008_011.map.tex.lz',
    'm010_016.map.dat.lz',
    'm038_001.map.dat.lz',
    'm009_001c.map.tex.lz',
    'm043_031.map.dat.lz',
    'm019_013.map.dat.lz',
    'm024_004.map.dat.lz',
    'm028_017.map.dat.lz',
    'm014_003a.map.dat.lz',
    'm005_001b.map.dat.lz',
    'm028_020.map.dat.lz',
    'm023_004.map.tex.lz',
    'm036_004.map.tex.lz',
    'm009_005.map.dat.lz',
    'm039_018.map.dat.lz',
    'm044_031.map.tex.lz',
    'm023_009.map.dat.lz',
    'm036_009.map.dat.lz',
    'm039_022.map.tex.lz',
    'm201_001.map.dat.lz',
    'm011_002.map.tex.lz',
    'm004_002.map.tex.lz',
    'm039_015.map.tex.lz',
    'm009_008.map.tex.lz',
    'm030_010.map.tex.lz',
    'm042_012.map.tex.lz',
    'm030_027.map.tex.lz',
    'm039_010a.map.tex.lz',
    'm010_007.map.tex.lz',
    'm038_010.map.tex.lz',
    'm019_002.map.tex.lz',
    'm001_008.map.tex.lz',
    'm014_008.map.tex.lz',
    'm041_001.map.dat.lz',
    'm043_020.map.tex.lz',
    'm033_003.map.dat.lz',
    'm001_005.map.dat.lz',
    'm014_005.map.dat.lz',
    'm022_001.map.tex.lz',
    'm043_042.map.tex.lz',
    'm004_013.map.dat.lz',
    'm023_018.map.tex.lz',
    'm036_018.map.tex.lz',
    'm025_001.map.dat.lz',
    'm030_001.map.dat.lz',
    'm017_007.map.dat.lz',
    'm028_031.map.tex.lz',
    'm028_006.map.tex.lz',
    'm042_056.map.dat.lz',
    'm039_009.map.tex.lz',
    'm021_003.map.tex.lz',
    'm036_022.map.dat.lz',
    'm009_014.map.tex.lz',
    'm023_015.map.dat.lz',
    'm036_015.map.dat.lz',
    'test.map.lz',
    'm036_004.map.dat.lz',
    'm023_004.map.dat.lz',
    'm044_031.map.dat.lz',
    'm039_018.map.tex.lz',
    'm009_005.map.tex.lz',
    'm014_003a.map.tex.lz',
    'm028_017.map.tex.lz',
    'm005_001b.map.tex.lz',
    'm028_020.map.tex.lz',
    'm042_012.map.dat.lz',
    'm030_010.map.dat.lz',
    'm030_027.map.dat.lz',
    'm201_001.map.tex.lz',
    'm039_022.map.dat.lz',
    'm036_009.map.tex.lz',
    'm023_009.map.tex.lz',
    'm009_008.map.dat.lz',
    'm039_015.map.dat.lz',
    'm004_002.map.dat.lz',
    'm011_002.map.dat.lz',
    'm008_011.map.dat.lz',
    'm020_006.map.dat.lz',
    'm039_005a.map.tex.lz',
    'm016_002.map.tex.lz',
    'm001_014.map.dat.lz',
    'm029_003.map.dat.lz',
    'm043_031.map.tex.lz',
    'm009_001c.map.dat.lz',
    'm024_004.map.tex.lz',
    'm019_013.map.tex.lz',
    'm038_001.map.tex.lz',
    'm010_016.map.tex.lz',
    'm030_001.map.tex.lz',
    'm025_001.map.tex.lz',
    'm004_013.map.tex.lz',
    'm036_018.map.dat.lz',
    'm023_018.map.dat.lz',
    'm009_014.map.dat.lz',
    'm021_003.map.dat.lz',
    'm036_022.map.tex.lz',
    'm042_056.map.tex.lz',
    'm039_009.map.dat.lz',
    'm036_015.map.tex.lz',
    'm023_015.map.tex.lz',
    'm028_031.map.dat.lz',
    'm017_007.map.tex.lz',
    'm028_006.map.dat.lz',
    'm014_008.map.dat.lz',
    'm001_008.map.dat.lz',
    'm019_002.map.dat.lz',
    'm033_003.map.tex.lz',
    'm041_001.map.tex.lz',
    'm043_020.map.dat.lz',
    'm039_010a.map.dat.lz',
    'm038_010.map.dat.lz',
    'm010_007.map.dat.lz',
    'm022_001.map.dat.lz',
    'm043_042.map.dat.lz',
    'm014_005.map.tex.lz',
    'm001_005.map.tex.lz',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
