prebuilt_files = [
    'm001_mes_us.mes',
    'm036_mes_us.mes',
    'm202_mes_us.mes',
    'm027_mes_us.mes',
    'm010_mes_us.mes',
    'm009_mes_us.mes',
    'm040_mes_us.mes',
    'm015_mes_us.mes',
    'm022_mes_us.mes',
    'm033_mes_us.mes',
    'm004_mes_us.mes',
    'm018_mes_us.mes',
    'm028_mes_us.mes',
    'm034_mes_us.mes',
    'm003_mes_us.mes',
    'm012_mes_us.mes',
    'm025_mes_us.mes',
    'm039_mes_us.mes',
    'm042_mes_us.mes',
    'm020_mes_us.mes',
    'm017_mes_us.mes',
    'm205_mes_us.mes',
    'm006_mes_us.mes',
    'm031_mes_us.mes',
    'm008_mes_us.mes',
    'm041_mes_us.mes',
    'm014_mes_us.mes',
    'm023_mes_us.mes',
    'm032_mes_us.mes',
    'm005_mes_us.mes',
    'm019_mes_us.mes',
    'm000_mes_us.mes',
    'm037_mes_us.mes',
    'm203_mes_us.mes',
    'm044_mes_us.mes',
    'm026_mes_us.mes',
    'm011_mes_us.mes',
    'm043_mes_us.mes',
    'm021_mes_us.mes',
    'm016_mes_us.mes',
    'm204_mes_us.mes',
    'm007_mes_us.mes',
    'm030_mes_us.mes',
    'm029_mes_us.mes',
    'm201_mes_us.mes',
    'm035_mes_us.mes',
    'm002_mes_us.mes',
    'm013_mes_us.mes',
    'm024_mes_us.mes',
    'm038_mes_us.mes',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
