prebuilt_files = [
    'chapter028_mes_us.mes',
    'chapter003_mes_us.mes',
    'chapter034_mes_us.mes',
    'chapter061_mes_us.mes',
    'chapter056_mes_us.mes',
    'chapter047_mes_us.mes',
    'chapter070_mes_us.mes',
    'chapter025_mes_us.mes',
    'chapter012_mes_us.mes',
    'chapterx04_mes_us.mes',
    'chapter039_mes_us.mes',
    'chapter075_mes_us.mes',
    'chapter042_mes_us.mes',
    'chapter017_mes_us.mes',
    'chapter020_mes_us.mes',
    'chapter069_mes_us.mes',
    'chapterx01_mes_us.mes',
    'chapter031_mes_us.mes',
    'chapter006_mes_us.mes',
    'chapter053_mes_us.mes',
    'chapter064_mes_us.mes',
    'chapter036_mes_us.mes',
    'chapter001_mes_us.mes',
    'chapter054_mes_us.mes',
    'chapter063_mes_us.mes',
    'chapter048_mes_us.mes',
    'chapter900_mes_us.mes',
    'chapterx06_mes_us.mes',
    'chapter059_mes_us.mes',
    'chapter072_mes_us.mes',
    'chapter045_mes_us.mes',
    'chapter010_mes_us.mes',
    'chapter027_mes_us.mes',
    'chapter009_mes_us.mes',
    'chapterx03_mes_us.mes',
    'chapter040_mes_us.mes',
    'chapter022_mes_us.mes',
    'chapter015_mes_us.mes',
    'chapter004_mes_us.mes',
    'chapter033_mes_us.mes',
    'chapter066_mes_us.mes',
    'chapter051_mes_us.mes',
    'chapter018_mes_us.mes',
    'chapter074_mes_us.mes',
    'chapter043_mes_us.mes',
    'chapter016_mes_us.mes',
    'chapter021_mes_us.mes',
    'chapter068_mes_us.mes',
    'chapter030_mes_us.mes',
    'chapter007_mes_us.mes',
    'chapter052_mes_us.mes',
    'chapter065_mes_us.mes',
    'chapter029_mes_us.mes',
    'chapter002_mes_us.mes',
    'chapter035_mes_us.mes',
    'chapter060_mes_us.mes',
    'chapter057_mes_us.mes',
    'chapter046_mes_us.mes',
    'chapter071_mes_us.mes',
    'chapter024_mes_us.mes',
    'chapter013_mes_us.mes',
    'chapter038_mes_us.mes',
    'chapterx05_mes_us.mes',
    'chapterx02_mes_us.mes',
    'chapter008_mes_us.mes',
    'chapter041_mes_us.mes',
    'chapter023_mes_us.mes',
    'chapter014_mes_us.mes',
    'chapter005_mes_us.mes',
    'chapter032_mes_us.mes',
    'chapter067_mes_us.mes',
    'chapter050_mes_us.mes',
    'chapter019_mes_us.mes',
    'chapter037_mes_us.mes',
    'chapter000_mes_us.mes',
    'chapter055_mes_us.mes',
    'chapter062_mes_us.mes',
    'chapter049_mes_us.mes',
    'chapter058_mes_us.mes',
    'chapter073_mes_us.mes',
    'chapter044_mes_us.mes',
    'chapter011_mes_us.mes',
    'chapter026_mes_us.mes',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
