prebuilt_files = [
    'mission_info_70_jp.mes',
    'mission_info_07_us.mes',
    'mission_info_13_jp.mes',
    'mission_info_19_us.mes',
    'mission_info_15_us.mes',
    'mission_info_01_jp.mes',
    'quest_info_57_jp.mes',
    'quest_info_20_us.mes',
    'quest_info_43_us.mes',
    'quest_info_49_jp.mes',
    'network04_mes_us.mes',
    'quest_info_34_jp.mes',
    'quest_info_45_jp.mes',
    'quest_info_38_jp.mes',
    'quest_info_32_us.mes',
    'quest_info_51_us.mes',
    'quest_info_26_jp.mes',
    'quest_info_04_us.mes',
    'mission_info_85_us.mes',
    'quest_info_10_jp.mes',
    'quest_info_61_jp.mes',
    'quest_info_16_us.mes',
    'mission_info_83_jp.mes',
    'quest_info_02_jp.mes',
    'quest_info_08_us.mes',
    'quest_info_59_jp.mes',
    'quest_info_53_us.mes',
    'quest_info_24_jp.mes',
    'quest_info_47_jp.mes',
    'quest_info_30_us.mes',
    'quest_info_41_us.mes',
    'quest_info_36_jp.mes',
    'quest_info_55_jp.mes',
    'network01_mes_us.mes',
    'quest_info_22_us.mes',
    'quest_info_28_jp.mes',
    'mission_info_81_jp.mes',
    'quest_info_00_jp.mes',
    'yakumono_info_us.mes',
    'quest_info_14_us.mes',
    'quest_info_18_us.mes',
    'quest_info_12_jp.mes',
    'place_info_us.mes',
    'quest_info_06_us.mes',
    'bg_info_us.mes',
    'dictionary03_mes_us.mes',
    'pokebook_info_jp.mes',
    'mission_info_74_us.mes',
    'mission_info_09_us.mes',
    'mission_info_03_jp.mes',
    'mission_info_17_us.mes',
    'mission_info_11_jp.mes',
    'pokemon_name_jp.mes',
    'mission_info_72_jp.mes',
    'mission_info_05_us.mes',
    'quest_info_16_jp.mes',
    'quest_info_61_us.mes',
    'quest_info_08_jp.mes',
    'quest_info_02_us.mes',
    'mission_info_83_us.mes',
    'mission_info_85_jp.mes',
    'quest_info_04_jp.mes',
    'menu_mes_us.mes',
    'quest_info_10_us.mes',
    'quest_info_32_jp.mes',
    'quest_info_38_us.mes',
    'assist_mes_us.mes',
    'quest_info_45_us.mes',
    'quest_info_26_us.mes',
    'quest_info_51_jp.mes',
    'quest_info_20_jp.mes',
    'quest_info_57_us.mes',
    'item_info_us.mes',
    'quest_info_34_us.mes',
    'quest_info_49_us.mes',
    'quest_info_43_jp.mes',
    'mission_info_15_jp.mes',
    'mission_info_01_us.mes',
    'mission_info_07_jp.mes',
    'mission_info_70_us.mes',
    'mission_info_19_jp.mes',
    'mission_info_13_us.mes',
    'network06_mes_us.mes',
    'mission_info_11_us.mes',
    'pokemon_name_us.mes',
    'mission_info_05_jp.mes',
    'mission_info_72_us.mes',
    'mission_info_03_us.mes',
    'mission_info_09_jp.mes',
    'mission_info_74_jp.mes',
    'mission_info_17_jp.mes',
    'inputname_mes_us.mes',
    'pokebook_info_us.mes',
    'line_info_us.mes',
    'network03_mes_us.mes',
    'network_mes_us.mes',
    'quest_info_12_us.mes',
    'quest_info_18_jp.mes',
    'quest_info_06_jp.mes',
    'quest_info_00_us.mes',
    'mission_info_81_us.mes',
    'quest_info_14_jp.mes',
    'yakumono_info_jp.mes',
    'quest_info_36_us.mes',
    'quest_info_41_jp.mes',
    'quest_info_28_us.mes',
    'quest_info_22_jp.mes',
    'quest_info_55_us.mes',
    'quest_info_24_us.mes',
    'dictionary01_mes_us.mes',
    'quest_info_53_jp.mes',
    'quest_info_59_us.mes',
    'quest_info_30_jp.mes',
    'quest_info_47_us.mes',
    'quest_info_11_jp.mes',
    'mission_info_84_us.mes',
    'quest_info_05_us.mes',
    'quest_info_03_jp.mes',
    'mission_info_82_jp.mes',
    'quest_info_09_us.mes',
    'quest_info_17_us.mes',
    'quest_info_60_jp.mes',
    'quest_info_35_jp.mes',
    'quest_info_42_us.mes',
    'quest_info_48_jp.mes',
    'quest_info_21_us.mes',
    'quest_info_56_jp.mes',
    'quest_info_27_jp.mes',
    'quest_info_50_us.mes',
    'quest_info_39_jp.mes',
    'quest_info_33_us.mes',
    'quest_info_44_jp.mes',
    'mission_info_12_jp.mes',
    'mission_info_18_us.mes',
    'dictionary02_mes_us.mes',
    'mission_info_06_us.mes',
    'mission_info_71_jp.mes',
    'mission_info_00_jp.mes',
    'staffroll_us.mes',
    'mission_info_14_us.mes',
    'item_name_jp.mes',
    'name_entry_us.mes',
    'mission_info_69_us.mes',
    'mission_info_16_us.mes',
    'mission_info_08_us.mes',
    'mission_info_02_jp.mes',
    'mission_info_04_us.mes',
    'mission_info_73_jp.mes',
    'mission_info_10_jp.mes',
    'place_name_us.mes',
    'yakumono_name_us.mes',
    'mission_info_20_us.mes',
    'dictionary_mes_us.mes',
    'npc_name_us.mes',
    'quest_info_15_us.mes',
    'fieldwaza_name_us.mes',
    'quest_info_01_jp.mes',
    'mission_info_80_jp.mes',
    'quest_info_07_us.mes',
    'quest_info_19_us.mes',
    'network05_mes_us.mes',
    'quest_info_13_jp.mes',
    'quest_info_31_us.mes',
    'quest_info_46_jp.mes',
    'quest_info_25_jp.mes',
    'pokemon_info_jp.mes',
    'quest_info_58_jp.mes',
    'quest_info_52_us.mes',
    'recode_mes_us.mes',
    'quest_info_23_us.mes',
    'quest_info_29_jp.mes',
    'quest_info_54_jp.mes',
    'quest_info_37_jp.mes',
    'quest_info_40_us.mes',
    'staffroll_jp.mes',
    'mission_info_00_us.mes',
    'name_entry_jp.mes',
    'mission_info_69_jp.mes',
    'item_name_us.mes',
    'mission_info_14_jp.mes',
    'network02_mes_us.mes',
    'mission_info_18_jp.mes',
    'mission_info_12_us.mes',
    'mission_info_71_us.mes',
    'mission_info_06_jp.mes',
    'quest_info_50_jp.mes',
    'quest_info_27_us.mes',
    'quest_info_44_us.mes',
    'quest_info_33_jp.mes',
    'quest_info_39_us.mes',
    'quest_info_48_us.mes',
    'quest_info_42_jp.mes',
    'quest_info_35_us.mes',
    'quest_info_56_us.mes',
    'quest_info_21_jp.mes',
    'quest_info_09_jp.mes',
    'mission_info_82_us.mes',
    'quest_info_03_us.mes',
    'quest_info_60_us.mes',
    'quest_info_17_jp.mes',
    'quest_info_11_us.mes',
    'quest_info_05_jp.mes',
    'mission_info_84_jp.mes',
    'quest_info_54_us.mes',
    'quest_info_29_us.mes',
    'quest_info_23_jp.mes',
    'quest_info_40_jp.mes',
    'quest_info_37_us.mes',
    'quest_info_46_us.mes',
    'quest_info_31_jp.mes',
    'quest_info_52_jp.mes',
    'pokemon_info_us.mes',
    'quest_info_58_us.mes',
    'quest_info_25_us.mes',
    'quest_info_07_jp.mes',
    'quest_info_13_us.mes',
    'quest_info_19_jp.mes',
    'fieldwaza_name_jp.mes',
    'quest_info_15_jp.mes',
    'mission_info_80_us.mes',
    'quest_info_01_us.mes',
    'mission_info_20_jp.mes',
    'yakumono_name_jp.mes',
    'npc_name_jp.mes',
    'place_name_jp.mes',
    'mission_info_73_us.mes',
    'mission_info_04_jp.mes',
    'mission_info_10_us.mes',
    'mission_info_16_jp.mes',
    'network07_mes_us.mes',
    'mission_info_02_us.mes',
    'mission_info_08_jp.mes',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
