prebuilt_files = [
    'quest031_mes_us.mes',
    'quest006_mes_us.mes',
    'quest053_mes_us.mes',
    'quest042_mes_us.mes',
    'quest017_mes_us.mes',
    'quest020_mes_us.mes',
    'quest039_mes_us.mes',
    'quest047_mes_us.mes',
    'quest025_mes_us.mes',
    'quest012_mes_us.mes',
    'quest003_mes_us.mes',
    'quest034_mes_us.mes',
    'quest061_mes_us.mes',
    'quest056_mes_us.mes',
    'quest028_mes_us.mes',
    'quest018_mes_us.mes',
    'quest004_mes_us.mes',
    'quest033_mes_us.mes',
    'quest051_mes_us.mes',
    'quest040_mes_us.mes',
    'quest022_mes_us.mes',
    'quest015_mes_us.mes',
    'quest009_mes_us.mes',
    'quest045_mes_us.mes',
    'quest010_mes_us.mes',
    'quest027_mes_us.mes',
    'quest059_mes_us.mes',
    'quest048_mes_us.mes',
    'quest036_mes_us.mes',
    'quest001_mes_us.mes',
    'quest054_mes_us.mes',
    'quest038_mes_us.mes',
    'quest046_mes_us.mes',
    'quest024_mes_us.mes',
    'quest013_mes_us.mes',
    'quest002_mes_us.mes',
    'quest035_mes_us.mes',
    'quest060_mes_us.mes',
    'quest057_mes_us.mes',
    'quest029_mes_us.mes',
    'quest030_mes_us.mes',
    'quest007_mes_us.mes',
    'quest052_mes_us.mes',
    'quest043_mes_us.mes',
    'quest016_mes_us.mes',
    'quest021_mes_us.mes',
    'quest044_mes_us.mes',
    'quest011_mes_us.mes',
    'quest026_mes_us.mes',
    'quest058_mes_us.mes',
    'quest049_mes_us.mes',
    'quest037_mes_us.mes',
    'quest000_mes_us.mes',
    'quest055_mes_us.mes',
    'quest019_mes_us.mes',
    'quest005_mes_us.mes',
    'quest032_mes_us.mes',
    'quest050_mes_us.mes',
    'quest041_mes_us.mes',
    'quest023_mes_us.mes',
    'quest014_mes_us.mes',
    'quest008_mes_us.mes',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
