prebuilt_files = [
    'e087.fsb',
    'e093.fsb',
    'e050.fsb',
    'e078.fsb',
    'e130.fsb',
    'e124.fsb',
    'e125.fsb',
    'e079.fsb',
    'e051.fsb',
    'e045.fsb',
    'e092.fsb',
    'e086.fsb',
    'e084.fsb',
    'e053.fsb',
    'e047.fsb',
    'e133.fsb',
    'e126.fsb',
    'e046.fsb',
    'e085.fsb',
    'e081.fsb',
    'e042.fsb',
    'e137.fsb',
    'e123.fsb',
    'e043.fsb',
    'e057.fsb',
    'e094.fsb',
    'e082.fsb',
    'e041.fsb',
    'e055.fsb',
    'e109.fsb',
    'e121.fsb',
    'e108.fsb',
    'e068.fsb',
    'e083.fsb',
    'e027.fsb',
    'e033.fsb',
    'e190.fsb',
    'e184.fsb',
    'e153.fsb',
    'e146.fsb',
    'e185.fsb',
    'e191.fsb',
    'e032.fsb',
    'e026.fsb',
    'e030.fsb',
    'e024.fsb',
    'e018.fsb',
    'e144.fsb',
    'e150.fsb',
    'e178.fsb',
    'e179.fsb',
    'e151.fsb',
    'e186.fsb',
    'e019.fsb',
    'e025.fsb',
    'e031.fsb',
    'e009.fsb',
    'e021.fsb',
    'e182.fsb',
    'e169.fsb',
    'e155.fsb',
    'e154.fsb',
    'e168.fsb',
    'e183.fsb',
    'e020.fsb',
    'e034.fsb',
    'e008.fsb',
    'e022.fsb',
    'e036.fsb',
    'e156.fsb',
    'e142.fsb',
    'e143.fsb',
    'e157.fsb',
    'e037.fsb',
    'e006.fsb',
    'e012.fsb',
    'e172.fsb',
    'e166.fsb',
    'e167.fsb',
    'e173.fsb',
    'e013.fsb',
    'e007.fsb',
    'e005.fsb',
    'e039.fsb',
    'e165.fsb',
    'e171.fsb',
    'e159.fsb',
    'e158.fsb',
    'e170.fsb',
    'e164.fsb',
    'e004.fsb',
    'e010.fsb',
    'e028.fsb',
    'e014.fsb',
    'e000.fsb',
    'e148.fsb',
    'e160.fsb',
    'e174.fsb',
    'e175.fsb',
    'e161.fsb',
    'e149.fsb',
    'e015.fsb',
    'e029.fsb',
    'e017.fsb',
    'e188.fsb',
    'e163.fsb',
    'e162.fsb',
    'e176.fsb',
    'e189.fsb',
    'e016.fsb',
    'e065.fsb',
    'e111.fsb',
    'e138.fsb',
    'e104.fsb',
    'e110.fsb',
    'e058.fsb',
    'e064.fsb',
    'e099.fsb',
    'e066.fsb',
    'e106.fsb',
    'e112.fsb',
    'e113.fsb',
    'e107.fsb',
    'e067.fsb',
    'e098.fsb',
    'e088.fsb',
    'e063.fsb',
    'e103.fsb',
    'e117.fsb',
    'e116.fsb',
    'e102.fsb',
    'e062.fsb',
    'e089.fsb',
    'e128.fsb',
    'e114.fsb',
    'e100.fsb',
    'e129.fsb',
    'e075.fsb',
    'e049.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
