prebuilt_files = [
    'p011.fsb',
    'p005.fsb',
    'p039.fsb',
    'p213.fsb',
    'p207.fsb',
    'p401.fsb',
    'p415.fsb',
    'p165.fsb',
    'p171.fsb',
    'p159.fsb',
    'p158.fsb',
    'p170.fsb',
    'p164.fsb',
    'p414.fsb',
    'p206.fsb',
    'p212.fsb',
    'p038.fsb',
    'p004.fsb',
    'p010.fsb',
    'p006.fsb',
    'p012.fsb',
    'p204.fsb',
    'p210.fsb',
    'p238.fsb',
    'p416.fsb',
    'p402.fsb',
    'p199.fsb',
    'p172.fsb',
    'p166.fsb',
    'p167.fsb',
    'p173.fsb',
    'p198.fsb',
    'p403.fsb',
    'p417.fsb',
    'p239.fsb',
    'p211.fsb',
    'p205.fsb',
    'p013.fsb',
    'p007.fsb',
    'p003.fsb',
    'p017.fsb',
    'p229.fsb',
    'p201.fsb',
    'p215.fsb',
    'p413.fsb',
    'p407.fsb',
    'p188.fsb',
    'p177.fsb',
    'p163.fsb',
    'p162.fsb',
    'p176.fsb',
    'p189.fsb',
    'p412.fsb',
    'p214.fsb',
    'p200.fsb',
    'p228.fsb',
    'p016.fsb',
    'p002.fsb',
    'p028.fsb',
    'p014.fsb',
    'p000.fsb',
    'p216.fsb',
    'p202.fsb',
    'p438.fsb',
    'p404.fsb',
    'p410.fsb',
    'p148.fsb',
    'p160.fsb',
    'p174.fsb',
    'p175.fsb',
    'p161.fsb',
    'p149.fsb',
    'p411.fsb',
    'p405.fsb',
    'p439.fsb',
    'p203.fsb',
    'p217.fsb',
    'p001.fsb',
    'p015.fsb',
    'p029.fsb',
    'p099.fsb',
    'p072.fsb',
    'p066.fsb',
    'p270.fsb',
    'p264.fsb',
    'p258.fsb',
    'p304.fsb',
    'p310.fsb',
    'p106.fsb',
    'p112.fsb',
    'p113.fsb',
    'p107.fsb',
    'p305.fsb',
    'p259.fsb',
    'p265.fsb',
    'p271.fsb',
    'p067.fsb',
    'p073.fsb',
    'p098.fsb',
    'p065.fsb',
    'p071.fsb',
    'p059.fsb',
    'p298.fsb',
    'p267.fsb',
    'p273.fsb',
    'p307.fsb',
    'p111.fsb',
    'p105.fsb',
    'p139.fsb',
    'p138.fsb',
    'p104.fsb',
    'p110.fsb',
    'p306.fsb',
    'p272.fsb',
    'p266.fsb',
    'p299.fsb',
    'p058.fsb',
    'p070.fsb',
    'p064.fsb',
    'p048.fsb',
    'p060.fsb',
    'p074.fsb',
    'p289.fsb',
    'p262.fsb',
    'p276.fsb',
    'p302.fsb',
    'p128.fsb',
    'p114.fsb',
    'p100.fsb',
    'p101.fsb',
    'p115.fsb',
    'p129.fsb',
    'p303.fsb',
    'p277.fsb',
    'p263.fsb',
    'p288.fsb',
    'p075.fsb',
    'p061.fsb',
    'p049.fsb',
    'p088.fsb',
    'p077.fsb',
    'p063.fsb',
    'p249.fsb',
    'p275.fsb',
    'p261.fsb',
    'p301.fsb',
    'p103.fsb',
    'p117.fsb',
    'p116.fsb',
    'p102.fsb',
    'p300.fsb',
    'p260.fsb',
    'p274.fsb',
    'p248.fsb',
    'p062.fsb',
    'p076.fsb',
    'p089.fsb',
    'p090.fsb',
    'p084.fsb',
    'p053.fsb',
    'p047.fsb',
    'p292.fsb',
    'p286.fsb',
    'p251.fsb',
    'p245.fsb',
    'p279.fsb',
    'p127.fsb',
    'p133.fsb',
    'p132.fsb',
    'p126.fsb',
    'p442.fsb',
    'p278.fsb',
    'p244.fsb',
    'p250.fsb',
    'p287.fsb',
    'p293.fsb',
    'p046.fsb',
    'p052.fsb',
    'p085.fsb',
    'p091.fsb',
    'p087.fsb',
    'p093.fsb',
    'p044.fsb',
    'p050.fsb',
    'p078.fsb',
    'p285.fsb',
    'p291.fsb',
    'p246.fsb',
    'p252.fsb',
    'p440.fsb',
    'p130.fsb',
    'p124.fsb',
    'p118.fsb',
    'p119.fsb',
    'p125.fsb',
    'p131.fsb',
    'p441.fsb',
    'p253.fsb',
    'p247.fsb',
    'p290.fsb',
    'p284.fsb',
    'p079.fsb',
    'p051.fsb',
    'p045.fsb',
    'p092.fsb',
    'p086.fsb',
    'p082.fsb',
    'p096.fsb',
    'p069.fsb',
    'p041.fsb',
    'p055.fsb',
    'p280.fsb',
    'p294.fsb',
    'p243.fsb',
    'p257.fsb',
    'p109.fsb',
    'p135.fsb',
    'p121.fsb',
    'p120.fsb',
    'p134.fsb',
    'p108.fsb',
    'p256.fsb',
    'p295.fsb',
    'p281.fsb',
    'p054.fsb',
    'p040.fsb',
    'p068.fsb',
    'p097.fsb',
    'p083.fsb',
    'p095.fsb',
    'p081.fsb',
    'p056.fsb',
    'p042.fsb',
    'p297.fsb',
    'p283.fsb',
    'p268.fsb',
    'p254.fsb',
    'p240.fsb',
    'p308.fsb',
    'p122.fsb',
    'p136.fsb',
    'p137.fsb',
    'p123.fsb',
    'p309.fsb',
    'p241.fsb',
    'p255.fsb',
    'p269.fsb',
    'p282.fsb',
    'p296.fsb',
    'p043.fsb',
    'p057.fsb',
    'p080.fsb',
    'p094.fsb',
    'p030.fsb',
    'p024.fsb',
    'p018.fsb',
    'p232.fsb',
    'p226.fsb',
    'p420.fsb',
    'p434.fsb',
    'p408.fsb',
    'p187.fsb',
    'p193.fsb',
    'p144.fsb',
    'p150.fsb',
    'p178.fsb',
    'p179.fsb',
    'p151.fsb',
    'p145.fsb',
    'p192.fsb',
    'p186.fsb',
    'p409.fsb',
    'p435.fsb',
    'p421.fsb',
    'p227.fsb',
    'p233.fsb',
    'p019.fsb',
    'p025.fsb',
    'p031.fsb',
    'p027.fsb',
    'p033.fsb',
    'p225.fsb',
    'p231.fsb',
    'p219.fsb',
    'p437.fsb',
    'p423.fsb',
    'p190.fsb',
    'p184.fsb',
    'p153.fsb',
    'p147.fsb',
    'p146.fsb',
    'p152.fsb',
    'p185.fsb',
    'p191.fsb',
    'p422.fsb',
    'p436.fsb',
    'p218.fsb',
    'p230.fsb',
    'p224.fsb',
    'p032.fsb',
    'p026.fsb',
    'p022.fsb',
    'p036.fsb',
    'p208.fsb',
    'p220.fsb',
    'p234.fsb',
    'p432.fsb',
    'p426.fsb',
    'p195.fsb',
    'p181.fsb',
    'p156.fsb',
    'p142.fsb',
    'p143.fsb',
    'p157.fsb',
    'p180.fsb',
    'p194.fsb',
    'p427.fsb',
    'p433.fsb',
    'p235.fsb',
    'p221.fsb',
    'p209.fsb',
    'p037.fsb',
    'p023.fsb',
    'p009.fsb',
    'p035.fsb',
    'p021.fsb',
    'p237.fsb',
    'p223.fsb',
    'p419.fsb',
    'p425.fsb',
    'p182.fsb',
    'p196.fsb',
    'p169.fsb',
    'p141.fsb',
    'p155.fsb',
    'p154.fsb',
    'p140.fsb',
    'p168.fsb',
    'p197.fsb',
    'p183.fsb',
    'p424.fsb',
    'p418.fsb',
    'p222.fsb',
    'p020.fsb',
    'p034.fsb',
    'p008.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
