prebuilt_files = [
    's040.fsb',
    's041.fsb',
    's043.fsb',
    's042.fsb',
    's046.fsb',
    's045.fsb',
    's044.fsb',
    's023.fsb',
    's037.fsb',
    's036.fsb',
    's022.fsb',
    's008.fsb',
    's034.fsb',
    's020.fsb',
    's021.fsb',
    's035.fsb',
    's009.fsb',
    's031.fsb',
    's025.fsb',
    's019.fsb',
    's018.fsb',
    's024.fsb',
    's030.fsb',
    's026.fsb',
    's032.fsb',
    's033.fsb',
    's027.fsb',
    's002.fsb',
    's016.fsb',
    's017.fsb',
    's003.fsb',
    's029.fsb',
    's015.fsb',
    's001.fsb',
    's000.fsb',
    's014.fsb',
    's028.fsb',
    's010.fsb',
    's004.fsb',
    's038.fsb',
    's039.fsb',
    's005.fsb',
    's011.fsb',
    's007.fsb',
    's013.fsb',
    's012.fsb',
    's006.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
