prebuilt_files = [
    'FieldEnemyScript8.fsb',
    'FieldEnemyScript15.fsb',
    'FieldEnemyScript14.fsb',
    'FieldEnemyScript9.fsb',
    'FieldEnemyScript16.fsb',
    'FieldEnemyScript17.fsb',
    'FieldEnemyScript13.fsb',
    'FieldEnemyScript12.fsb',
    'FieldEnemyScript10.fsb',
    'FieldEnemyScript38.fsb',
    'FieldEnemyScript39.fsb',
    'FieldEnemyScript11.fsb',
    'FieldEnemyScript62.fsb',
    'FieldEnemyScript49.fsb',
    'FieldEnemyScript61.fsb',
    'FieldEnemyScript60.fsb',
    'FieldEnemyScript48.fsb',
    'FieldEnemyScript58.fsb',
    'FieldEnemyScript59.fsb',
    'FieldEnemyScript43.fsb',
    'FieldEnemyScript57.fsb',
    'FieldEnemyScript56.fsb',
    'FieldEnemyScript42.fsb',
    'FieldPartnerPokemonScript.fsb',
    'FieldEnemyScript54.fsb',
    'FieldEnemyScript40.fsb',
    'FieldEnemyScript41.fsb',
    'FieldEnemyScript55.fsb',
    'FieldPartnerNpcScript.fsb',
    'FieldEnemyScript51.fsb',
    'FieldEnemyScript45.fsb',
    'FieldEnemyScript44.fsb',
    'FieldEnemyScript50.fsb',
    'FieldEnemyScript46.fsb',
    'FieldEnemyScript52.fsb',
    'FieldEnemyScript53.fsb',
    'FieldEnemyScript47.fsb',
    'FieldEnemyScript1.fsb',
    'FieldEnemyScript20.fsb',
    'FieldEnemyScript21.fsb',
    'FieldEnemyScript0.fsb',
    'FieldEnemyScript2.fsb',
    'FieldEnemyScript23.fsb',
    'FieldEnemyScript22.fsb',
    'FieldEnemyScript3.fsb',
    'FieldEnemyScript7.fsb',
    'FieldEnemyScript6.fsb',
    'FieldEnemyScript4.fsb',
    'FieldEnemyScript31.fsb',
    'FieldEnemyScript19.fsb',
    'FieldEnemyScript18.fsb',
    'FieldEnemyScript30.fsb',
    'FieldEnemyScript.fsb',
    'FieldEnemyScript5.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
